[project]
name = "fcsuite"
description = "fcFloatMatic is a custom module, that when configured correctly will increment through the lines generating you loras at different strengths. The JSON file will load the config."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/fitCorder/fcSuite"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "fcSuite"
Icon = ""
